@@ -64,6 +64,13 @@
 			<artifactId>flyway-core</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		
+		
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
@@ -72,30 +79,40 @@
 	<build>
 		<plugins>		
 			<plugin>
-			
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>	
-				 		
-			</plugin>
-			 <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                	                	 
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
-            </plugin>
-            <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
-        <configuration>
-          <includes>
-            <include>CadastroCozinhaIntegrationTests.java</include>
-          </includes>
-        </configuration>
-      </plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>${maven-surefire-plugin.version}</version>
+		<configuration>
+			<skipTests>${skip.unit.tests}</skipTests>
+			<argLine>
+				${argLine} --illegal-access=permit
+			</argLine>
+		</configuration>
+	</plugin>
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-failsafe-plugin</artifactId>
+		<version>${maven-failsafe-plugin.version}</version>
+		<configuration>
+			<argLine>
+				<!-- ${argLine} - necessário para funcionar o jacoco corretamente-->
+				${argLine} --illegal-access=permit
+			</argLine>
+		</configuration>
+		<executions>
+			<execution>
+				<goals>
+					<goal>integration-test</goal>
+					<goal>verify</goal>
+				</goals>
+				<configuration>
+					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
+					<skipTests>${skip.it.tests}</skipTests>
+				</configuration>
+			</execution>
+		</executions>
+	</plugin>
 		</plugins>
 	</build>
 
